syntax = "proto3";

package content;

import "common.proto";

service ContentController {
    rpc create (CreateContentRequest) returns (CreateContentResponse);
}

message CreateContentRequest {
    common.DataSourceEnumDTO source = 1;
    ContentBodyDTO contentBody = 2;
}

message CreateContentResponse {
    
}

message ContentBodyDTO {
    oneof data {
        common.ItemDTO item = 1;
        common.PastExperienceDTO pastExperience = 2;
        common.CharacterMemoryDTO characterMemory = 3;
        common.MemoryDTO memory = 4;
        common.MemoryPoolDTO memoryPool = 5;
        common.MemoryPoolEntryDTO memoryPoolEntry = 6;
        common.SkillDTO skill = 7;
        common.SkillSetDTO skillSet = 8;
        common.EquipmentSlotDTO equipmentSlot = 9;
        common.StorageSlotDTO storageSlot = 10;
        common.TraitDTO trait = 11;
        common.AddictionDTO addiction = 12;
        common.BackgroundDTO background = 13;
        common.BirthsignDTO birthsign = 14;
        common.CharacterDTO character = 15;
        common.CharacterGenInstructionDTO characterGenInstruction = 16;
        common.CharacterGroupGenInstructionDTO characterGroupGenInstruction = 17;
        common.CharacterProfessionDTO characterProfession = 18;
        common.DiseaseDTO disease = 19;
        common.EffectDTO effect = 20;
        common.FactDTO fact = 21;
        common.FactionDTO faction = 22;
        common.ItemSetDTO itemSet = 23;
        common.MoodDTO mood = 24;
        common.NeedDTO need = 25;
        common.PersonalityProfileDTO personalityProfile = 26;
        common.RaceDTO race = 27;
        common.ReligionDTO religion = 28;
        common.ResistanceDTO resistance = 29;
        common.StatusDTO status = 30;
        common.TagDTO tag = 31;
    }
}
